--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <title>Speak Your Lyric</title>
-  </head>
-  <body>
- 
-    <input type="text" class="input">
-    <button class="btn">Submit</button>
-  </body>
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+	<link href="https://fonts.googleapis.com/css?family=Lato:400,700|Lobster&display=swap" rel="stylesheet">
+
+	<title>Speak Your Lyric</title>
+</head>
+
+<body>
+	
+	<div class="container">
+		<header class="header">
+			<img src="./assets/logo.svg" alt="" class="header__logo">
+			<h1 class="header__title">Speak Your Lyric</h1>
+		</header>
+		<form class="search">
+			<input type="text" class="search__input" placeholder="Start Speaking...">
+		</form>
+	</div>
+	
+</body>
+
 </html>
