--- a/src/index.html
+++ b/src/index.html
@@ -11,15 +11,161 @@
 </head>
 
 <body>
-	
 	<div class="container">
 		<header class="header">
 			<img src="./assets/logo.svg" alt="" class="header__logo">
 			<h1 class="header__title">Speak Your Lyric</h1>
 		</header>
-		<form class="search">
+		<section class="search">
 			<input type="text" class="search__input" placeholder="Start Speaking...">
-		</form>
+			<img src="./assets/spinner.svg" alt="" class="search__spinner">
+		</section>
+		<section class="instructions">
+			<h2 class="instructions__title">Instructions</h2>
+			<ul class="instructions__list">
+				<li class="instructions__list--item">Give browser access to microphone</li>
+				<li class="instructions__list--item">Speak your lyric</li>
+				<li class="instructions__list--item">Wait</li>
+			</ul>
+		</section>
+		<section class="results">
+			<h2 class="results__title">Results</h2>
+			<div class="results__card">
+				<img src="./assets/a.jpg" alt="" class="results__card--img">
+				<div class="results__card--content">
+					<h3 class="results__card--title">First Time</h3>
+					<h3 class="results__card--artist">By <span>Carly Rae Jepsen</span></h3>
+					<div class="results__card--icons">
+						<a href="" target="_blank">
+							<img src="assets/youtube-logo.svg" alt="" class="results__card--logo">
+						</a>
+						<a href="" target="_blank">
+							<img src="assets/spotify-logo.svg" alt="" class="results__card--logo">
+						</a>
+					</div>
+				</div>
+			</div>
+			<div class="results__card">
+				<img src="./assets/a.jpg" alt="" class="results__card--img">
+				<div class="results__card--content">
+					<h3 class="results__card--title">First Time</h3>
+					<h3 class="results__card--artist">By Carly Rae Jepsen</h3>
+					<div class="results__card--icons">
+						<a href="" target="_blank">
+							<img src="assets/youtube-logo.svg" alt="" class="results__card--logo">
+						</a>
+						<a href="" target="_blank">
+							<img src="assets/spotify-logo.svg" alt="" class="results__card--logo">
+						</a>
+					</div>
+				</div>
+			</div>
+			<div class="results__card">
+				<img src="./assets/a.jpg" alt="" class="results__card--img">
+				<div class="results__card--content">
+					<h3 class="results__card--title">First Time</h3>
+					<h3 class="results__card--artist">By Carly Rae Jepsen</h3>
+					<div class="results__card--icons">
+						<a href="" target="_blank">
+							<img src="assets/youtube-logo.svg" alt="" class="results__card--logo">
+						</a>
+						<a href="" target="_blank">
+							<img src="assets/spotify-logo.svg" alt="" class="results__card--logo">
+						</a>
+					</div>
+				</div>
+			</div>
+			<div class="results__card">
+				<img src="./assets/a.jpg" alt="" class="results__card--img">
+				<div class="results__card--content">
+					<h3 class="results__card--title">First Time</h3>
+					<h3 class="results__card--artist">By Carly Rae Jepsen</h3>
+					<div class="results__card--icons">
+						<a href="" target="_blank">
+							<img src="assets/youtube-logo.svg" alt="" class="results__card--logo">
+						</a>
+						<a href="" target="_blank">
+							<img src="assets/spotify-logo.svg" alt="" class="results__card--logo">
+						</a>
+					</div>
+				</div>
+			</div>
+			<div class="results__card">
+				<img src="./assets/a.jpg" alt="" class="results__card--img">
+				<div class="results__card--content">
+					<h3 class="results__card--title">First Time</h3>
+					<h3 class="results__card--artist">By Carly Rae Jepsen</h3>
+					<div class="results__card--icons">
+						<a href="" target="_blank">
+							<img src="assets/youtube-logo.svg" alt="" class="results__card--logo">
+						</a>
+						<a href="" target="_blank">
+							<img src="assets/spotify-logo.svg" alt="" class="results__card--logo">
+						</a>
+					</div>
+				</div>
+			</div>
+			<div class="results__card">
+				<img src="./assets/a.jpg" alt="" class="results__card--img">
+				<div class="results__card--content">
+					<h3 class="results__card--title">First Time</h3>
+					<h3 class="results__card--artist">By Carly Rae Jepsen</h3>
+					<div class="results__card--icons">
+						<a href="" target="_blank">
+							<img src="assets/youtube-logo.svg" alt="" class="results__card--logo">
+						</a>
+						<a href="" target="_blank">
+							<img src="assets/spotify-logo.svg" alt="" class="results__card--logo">
+						</a>
+					</div>
+				</div>
+			</div>
+			<div class="results__card">
+				<img src="./assets/a.jpg" alt="" class="results__card--img">
+				<div class="results__card--content">
+					<h3 class="results__card--title">First Time</h3>
+					<h3 class="results__card--artist">By Carly Rae Jepsen</h3>
+					<div class="results__card--icons">
+						<a href="" target="_blank">
+							<img src="assets/youtube-logo.svg" alt="" class="results__card--logo">
+						</a>
+						<a href="" target="_blank">
+							<img src="assets/spotify-logo.svg" alt="" class="results__card--logo">
+						</a>
+					</div>
+				</div>
+			</div>
+			<div class="results__card">
+				<img src="./assets/a.jpg" alt="" class="results__card--img">
+				<div class="results__card--content">
+					<h3 class="results__card--title">First Time</h3>
+					<h3 class="results__card--artist">By Carly Rae Jepsen</h3>
+					<div class="results__card--icons">
+						<a href="" target="_blank">
+							<img src="assets/youtube-logo.svg" alt="" class="results__card--logo">
+						</a>
+						<a href="" target="_blank">
+							<img src="assets/spotify-logo.svg" alt="" class="results__card--logo">
+						</a>
+					</div>
+				</div>
+			</div>
+			<div class="results__card">
+				<img src="./assets/a.jpg" alt="" class="results__card--img">
+				<div class="results__card--content">
+					<h3 class="results__card--title">First Time</h3>
+					<h3 class="results__card--artist">By Carly Rae Jepsen</h3>
+					<div class="results__card--icons">
+						<a href="" target="_blank">
+							<img src="assets/youtube-logo.svg" alt="" class="results__card--logo">
+						</a>
+						<a href="" target="_blank">
+							<img src="assets/spotify-logo.svg" alt="" class="results__card--logo">
+						</a>
+					</div>
+				</div>
+			</div>
+		</section>
 	</div>
 	
 </body>
