Fixed view on mobile. All final changes finished.

--- a/src/index.html
+++ b/src/index.html
@@ -26,144 +26,27 @@
 				<li class="instructions__list--item">Give browser access to microphone</li>
 				<li class="instructions__list--item">Speak your lyric</li>
 				<li class="instructions__list--item">Wait</li>
+				<li class="instructions__list--item">Note: This app only works in Google Chrome</li>
 			</ul>
 		</section>
 		<section class="results">
 			<h2 class="results__title">Results</h2>
-			<div class="results__card">
-				<img src="./assets/a.jpg" alt="" class="results__card--img">
-				<div class="results__card--content">
-					<h3 class="results__card--title">First Time</h3>
-					<h3 class="results__card--artist">By <span>Carly Rae Jepsen</span></h3>
-					<div class="results__card--icons">
-						<a href="" target="_blank">
-							<img src="assets/youtube-logo.svg" alt="" class="results__card--logo">
-						</a>
-						<a href="" target="_blank">
-							<img src="assets/spotify-logo.svg" alt="" class="results__card--logo">
-						</a>
+			<div class="results__results">
+				<!-- <div class="results__card">
+					<img src="./assets/a.jpg" alt="" class="results__card--img">
+					<div class="results__card--content">
+						<h3 class="results__card--title">First Time</h3>
+						<h3 class="results__card--artist">By <span>Carly Rae Jepsen</span></h3>
+						<div class="results__card--icons">
+							<a href="" target="_blank">
+								<img src="assets/youtube-logo.svg" alt="" class="results__card--logo">
+							</a>
+							<a href="" target="_blank">
+								<img src="assets/spotify-logo.svg" alt="" class="results__card--logo">
+							</a>
+						</div>
 					</div>
-				</div>
-			</div>
-			<div class="results__card">
-				<img src="./assets/a.jpg" alt="" class="results__card--img">
-				<div class="results__card--content">
-					<h3 class="results__card--title">First Time</h3>
-					<h3 class="results__card--artist">By Carly Rae Jepsen</h3>
-					<div class="results__card--icons">
-						<a href="" target="_blank">
-							<img src="assets/youtube-logo.svg" alt="" class="results__card--logo">
-						</a>
-						<a href="" target="_blank">
-							<img src="assets/spotify-logo.svg" alt="" class="results__card--logo">
-						</a>
-					</div>
-				</div>
-			</div>
-			<div class="results__card">
-				<img src="./assets/a.jpg" alt="" class="results__card--img">
-				<div class="results__card--content">
-					<h3 class="results__card--title">First Time</h3>
-					<h3 class="results__card--artist">By Carly Rae Jepsen</h3>
-					<div class="results__card--icons">
-						<a href="" target="_blank">
-							<img src="assets/youtube-logo.svg" alt="" class="results__card--logo">
-						</a>
-						<a href="" target="_blank">
-							<img src="assets/spotify-logo.svg" alt="" class="results__card--logo">
-						</a>
-					</div>
-				</div>
-			</div>
-			<div class="results__card">
-				<img src="./assets/a.jpg" alt="" class="results__card--img">
-				<div class="results__card--content">
-					<h3 class="results__card--title">First Time</h3>
-					<h3 class="results__card--artist">By Carly Rae Jepsen</h3>
-					<div class="results__card--icons">
-						<a href="" target="_blank">
-							<img src="assets/youtube-logo.svg" alt="" class="results__card--logo">
-						</a>
-						<a href="" target="_blank">
-							<img src="assets/spotify-logo.svg" alt="" class="results__card--logo">
-						</a>
-					</div>
-				</div>
-			</div>
-			<div class="results__card">
-				<img src="./assets/a.jpg" alt="" class="results__card--img">
-				<div class="results__card--content">
-					<h3 class="results__card--title">First Time</h3>
-					<h3 class="results__card--artist">By Carly Rae Jepsen</h3>
-					<div class="results__card--icons">
-						<a href="" target="_blank">
-							<img src="assets/youtube-logo.svg" alt="" class="results__card--logo">
-						</a>
-						<a href="" target="_blank">
-							<img src="assets/spotify-logo.svg" alt="" class="results__card--logo">
-						</a>
-					</div>
-				</div>
-			</div>
-			<div class="results__card">
-				<img src="./assets/a.jpg" alt="" class="results__card--img">
-				<div class="results__card--content">
-					<h3 class="results__card--title">First Time</h3>
-					<h3 class="results__card--artist">By Carly Rae Jepsen</h3>
-					<div class="results__card--icons">
-						<a href="" target="_blank">
-							<img src="assets/youtube-logo.svg" alt="" class="results__card--logo">
-						</a>
-						<a href="" target="_blank">
-							<img src="assets/spotify-logo.svg" alt="" class="results__card--logo">
-						</a>
-					</div>
-				</div>
-			</div>
-			<div class="results__card">
-				<img src="./assets/a.jpg" alt="" class="results__card--img">
-				<div class="results__card--content">
-					<h3 class="results__card--title">First Time</h3>
-					<h3 class="results__card--artist">By Carly Rae Jepsen</h3>
-					<div class="results__card--icons">
-						<a href="" target="_blank">
-							<img src="assets/youtube-logo.svg" alt="" class="results__card--logo">
-						</a>
-						<a href="" target="_blank">
-							<img src="assets/spotify-logo.svg" alt="" class="results__card--logo">
-						</a>
-					</div>
-				</div>
-			</div>
-			<div class="results__card">
-				<img src="./assets/a.jpg" alt="" class="results__card--img">
-				<div class="results__card--content">
-					<h3 class="results__card--title">First Time</h3>
-					<h3 class="results__card--artist">By Carly Rae Jepsen</h3>
-					<div class="results__card--icons">
-						<a href="" target="_blank">
-							<img src="assets/youtube-logo.svg" alt="" class="results__card--logo">
-						</a>
-						<a href="" target="_blank">
-							<img src="assets/spotify-logo.svg" alt="" class="results__card--logo">
-						</a>
-					</div>
-				</div>
-			</div>
-			<div class="results__card">
-				<img src="./assets/a.jpg" alt="" class="results__card--img">
-				<div class="results__card--content">
-					<h3 class="results__card--title">First Time</h3>
-					<h3 class="results__card--artist">By Carly Rae Jepsen</h3>
-					<div class="results__card--icons">
-						<a href="" target="_blank">
-							<img src="assets/youtube-logo.svg" alt="" class="results__card--logo">
-						</a>
-						<a href="" target="_blank">
-							<img src="assets/spotify-logo.svg" alt="" class="results__card--logo">
-						</a>
-					</div>
-				</div>
+				</div> -->
 			</div>
 		</section>
 	</div>
