--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 <body>
 	<div class="container">
 		<header class="header">
-			<img src="./assets/logo.svg" alt="" class="header__logo">
+			<img src="./assets/spotify-logo.svg" alt="" class="header__logo">
 			<h1 class="header__title">Speak Your Lyric</h1>
 		</header>
 		<section class="search">
@@ -24,6 +24,7 @@
 			<h2 class="instructions__title">Instructions</h2>
 			<ul class="instructions__list">
 				<li class="instructions__list--item">Give browser access to microphone</li>
+				<li class="instructions__list--item">If Chrome doesn't ask you for permission, check the icon at the end of the URL bar</li>
 				<li class="instructions__list--item">Speak your lyric</li>
 				<li class="instructions__list--item">Wait</li>
 				<li class="instructions__list--item">Note: This app only works in Google Chrome</li>
@@ -49,6 +50,9 @@
 				</div> -->
 			</div>
 		</section>
+
+		<img src="./assets/spotify-logo.svg" alt="" class="preload">
+		<img src="./assets/youtube-logo.svg" alt="" class="preload">
 	</div>
 	
 </body>
